<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Group59</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="checkbox_admin">Admin</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_logout" tools:keep="@string/action_logout">Logout</string>
    <string name="error_invalid_email" tools:keep="@string/error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password" tools:keep="@string/error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password" tools:keep="@string/error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required" tools:keep="@string/error_field_required">This field is required</string>
    <string name="permission_rationale" tools:keep="@string/permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_homeless_home">Homeless Shelters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_applicable">N/A</string>
    <string name="special_notes_label">Special Notes:</string>
    <string name="restrictions_label">Restrictions:</string>
    <string name="capacity_label">Capacity: </string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="address_label">Address:</string>
    <string name="homeless_home_label">HomelessHomeActivityLabel</string>
    <string name="title_search_shelter">Search Shelter</string>
    <string name="title_shelter_map">Shelter Map</string>
    <string name="title_filter_shelter">Filter Shelters</string>
    <string name="title_gender_filter">Gender Filter</string>
    <string name="title_restrictions_filter">Restrictions Filter</string>
    <string name="reserved_spots_label">Reserved Spots (10 max):</string>
    <string name="reserve_spots_button">Reserve Spots</string>
    <string name="title_activity_shelter_list_map" tools:keep="@string/title_activity_shelter_list_map">Shelter List Map</string>
</resources>
