<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search_shelter_option"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search_shelter"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView">
    </item>

    <item android:id="@+id/shelter_list_filters_option"
        android:icon="@drawable/ic_filter_list_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_filter_shelter">

        <item android:id="@+id/filter_gender_option"
            android:title="@string/title_gender_filter">

        </item>

        <item android:id="@+id/filter_restrictions_option"
            android:title="@string/title_restrictions_filter">

        </item>

    </item>
</menu>